prosynth/yagostart/souffle/souffle/parser.output
Terminals unused in grammar

    "::"


Grammar

    0 $accept: program "end of file"

    1 program: unit

    2 unit: unit type
    3     | unit functor_decl
    4     | unit relation_decl
    5     | unit load_head
    6     | unit store_head
    7     | unit fact
    8     | unit rule
    9     | unit component
   10     | unit comp_init
   11     | unit pragma
   12     | %empty

   13 identifier: "identifier"
   14           | identifier "." "identifier"

   15 type: "numeric type declaration" "identifier"
   16     | "symbolic type declaration" "identifier"
   17     | "type declaration" "identifier"
   18     | "type declaration" "identifier" "=" union_type_list
   19     | "type declaration" "identifier" "=" "[" "]"
   20     | "type declaration" "identifier" "=" "[" non_empty_record_type_list "]"

   21 non_empty_record_type_list: "identifier" ":" identifier
   22                           | non_empty_record_type_list "," "identifier" ":" identifier

   23 union_type_list: identifier
   24                | union_type_list "|" identifier

   25 relation_decl: "relation declaration" relation_list "(" ")" qualifiers
   26              | "relation declaration" relation_list "(" non_empty_attributes ")" qualifiers

   27 relation_list: "identifier"
   28              | relation_list "," "identifier"

   29 non_empty_attributes: "identifier" ":" identifier
   30                     | non_empty_attributes "," "identifier" ":" identifier

   31 qualifiers: qualifiers "relation qualifier output"
   32           | qualifiers "relation qualifier input"
   33           | qualifiers "relation qualifier printsize"
   34           | qualifiers "relation qualifier overidable"
   35           | qualifiers "relation qualifier inline"
   36           | qualifiers "BRIE datastructure qualifier"
   37           | qualifiers "BTREE datastructure qualifier"
   38           | qualifiers "equivalence relation qualifier"
   39           | %empty

   40 fact: atom "."

   41 rule: rule_def
   42     | rule "strict marker"
   43     | rule exec_plan

   44 rule_def: head ":-" body "."

   45 head: atom
   46     | head "," atom

   47 body: disjunction

   48 disjunction: conjunction
   49            | disjunction ";" conjunction

   50 conjunction: term
   51            | conjunction "," term

   52 exec_plan: "plan keyword" exec_plan_list

   53 exec_plan_list: "number" ":" "(" exec_order_list ")"
   54               | exec_plan_list "," "number" ":" "(" exec_order_list ")"

   55 exec_order_list: non_empty_exec_order_list
   56                | %empty

   57 non_empty_exec_order_list: "number"
   58                          | non_empty_exec_order_list "," "number"

   59 term: atom
   60     | constraint
   61     | "!" term
   62     | "(" disjunction ")"

   63 atom: identifier "(" non_empty_arg_list ")"
   64     | identifier "(" ")"

   65 constraint: arg "relational operator" arg
   66           | arg "<" arg
   67           | arg ">" arg
   68           | arg "=" arg
   69           | "match predicate" "(" arg "," arg ")"
   70           | "checks whether substring is contained in a string" "(" arg "," arg ")"
   71           | "true literal constraint"
   72           | "false literal constraint"

   73 non_empty_arg_list: arg
   74                   | non_empty_arg_list "," arg

   75 arg: "symbol"
   76    | "number"
   77    | "_"
   78    | "$"
   79    | "identifier"
   80    | "(" arg ")"
   81    | "type cast" "(" arg "," identifier ")"
   82    | "nil reference"
   83    | "[" "]"
   84    | "[" non_empty_arg_list "]"
   85    | "@" "identifier" "(" ")"
   86    | "@" "identifier" "(" non_empty_arg_list ")"
   87    | "-" arg
   88    | "bnot" arg
   89    | "lnot" arg
   90    | "ordinal number of a string" "(" arg ")"
   91    | "length of a string" "(" arg ")"
   92    | "convert string to number" "(" arg ")"
   93    | "convert number to string" "(" arg ")"
   94    | arg "+" arg
   95    | arg "-" arg
   96    | arg "*" arg
   97    | arg "/" arg
   98    | arg "%" arg
   99    | arg "^" arg
  100    | arg "bor" arg
  101    | arg "bxor" arg
  102    | arg "band" arg
  103    | arg "lor" arg
  104    | arg "land" arg
  105    | "max aggregator" "(" arg "," non_empty_arg_list ")"
  106    | "min aggregator" "(" arg "," non_empty_arg_list ")"
  107    | "concatenation of two strings" "(" arg "," non_empty_arg_list ")"
  108    | "sub-string of a string" "(" arg "," arg "," arg ")"
  109    | "count aggregator" ":" atom
  110    | "count aggregator" ":" "{" body "}"
  111    | "sum aggregator" arg ":" atom
  112    | "sum aggregator" arg ":" "{" body "}"
  113    | "min aggregator" arg ":" atom
  114    | "min aggregator" arg ":" "{" body "}"
  115    | "max aggregator" arg ":" atom
  116    | "max aggregator" arg ":" "{" body "}"

  117 component: component_head "{" component_body "}"

  118 component_head: "component declaration" comp_type
  119               | component_head ":" comp_type
  120               | component_head "," comp_type

  121 comp_type: "identifier" type_params

  122 type_params: "<" type_param_list ">"
  123            | %empty

  124 type_param_list: "identifier"
  125                | type_param_list "," "identifier"

  126 component_body: component_body type
  127               | component_body relation_decl
  128               | component_body load_head
  129               | component_body store_head
  130               | component_body fact
  131               | component_body rule
  132               | component_body "override rules of super-component" "identifier"
  133               | component_body comp_init
  134               | component_body component
  135               | %empty

  136 comp_init: "component instantiation" "identifier" "=" comp_type

  137 functor_decl: "functor declaration" "identifier" "(" ")" ":" functor_type
  138             | "functor declaration" "identifier" "(" non_empty_functor_arg_type_list ")" ":" functor_type

  139 non_empty_functor_arg_type_list: functor_type
  140                                | non_empty_functor_arg_type_list "," functor_type

  141 functor_type: "identifier"

  142 pragma: "pragma directive" "symbol" "symbol"
  143       | "pragma directive" "symbol"

  144 load_head: "input directives declaration" io_directive_list

  145 store_head: "output directives declaration" io_directive_list
  146           | "printsize directives declaration" io_directive_list

  147 io_directive_list: io_relation_list
  148                  | io_relation_list "(" ")"
  149                  | io_relation_list "(" non_empty_key_value_pairs ")"

  150 io_relation_list: identifier
  151                 | io_relation_list "," identifier

  152 non_empty_key_value_pairs: "identifier" "=" kvp_value
  153                          | non_empty_key_value_pairs "," "identifier" "=" kvp_value

  154 kvp_value: "symbol"
  155          | "identifier"
  156          | "true literal constraint"
  157          | "false literal constraint"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "symbol" <std::string> (258) 75 142 143 154
    "identifier" <std::string> (259) 13 14 15 16 17 18 19 20 21 22 27 28 29 30 79 85 86 121 124 125 132 136 137 138 141 152 153 155
    "number" <AstDomain> (260) 53 54 57 58 76
    "relational operator" <std::string> (261) 65
    "pragma directive" (262) 142 143
    "relation qualifier output" (263) 31
    "relation qualifier input" (264) 32
    "relation qualifier printsize" (265) 33
    "BRIE datastructure qualifier" (266) 36
    "BTREE datastructure qualifier" (267) 37
    "equivalence relation qualifier" (268) 38
    "relation qualifier overidable" (269) 34
    "relation qualifier inline" (270) 35
    "match predicate" (271) 69
    "checks whether substring is contained in a string" (272) 70
    "concatenation of two strings" (273) 107
    "ordinal number of a string" (274) 90
    "length of a string" (275) 91
    "sub-string of a string" (276) 108
    "min aggregator" (277) 106 113 114
    "max aggregator" (278) 105 115 116
    "count aggregator" (279) 109 110
    "sum aggregator" (280) 111 112
    "true literal constraint" (281) 71 156
    "false literal constraint" (282) 72 157
    "strict marker" (283) 42
    "plan keyword" (284) 52
    ":-" (285) 44
    "relation declaration" (286) 25 26
    "functor declaration" (287) 137 138
    "input directives declaration" (288) 144
    "output directives declaration" (289) 145
    "printsize directives declaration" (290) 146
    "override rules of super-component" (291) 132
    "type declaration" (292) 17 18 19 20
    "component declaration" (293) 118
    "component instantiation" (294) 136
    "numeric type declaration" (295) 15
    "symbolic type declaration" (296) 16
    "convert string to number" (297) 92
    "convert number to string" (298) 93
    "type cast" (299) 81
    "@" (300) 85 86
    "nil reference" (301) 82
    "|" (302) 24
    "[" (303) 19 20 83 84
    "]" (304) 19 20 83 84
    "_" (305) 77
    "$" (306) 78
    "+" (307) 94
    "-" (308) 87 95
    "!" (309) 61
    "(" (310) 25 26 53 54 62 63 64 69 70 80 81 85 86 90 91 92 93 105 106 107 108 137 138 148 149
    ")" (311) 25 26 53 54 62 63 64 69 70 80 81 85 86 90 91 92 93 105 106 107 108 137 138 148 149
    "," (312) 22 28 30 46 51 54 58 69 70 74 81 105 106 107 108 120 125 140 151 153
    ":" (313) 21 22 29 30 53 54 109 110 111 112 113 114 115 116 119 137 138
    "::" (314)
    ";" (315) 49
    "." (316) 14 40 44
    "=" (317) 18 19 20 68 136 152 153
    "*" (318) 96
    "/" (319) 97
    "^" (320) 99
    "%" (321) 98
    "{" (322) 110 112 114 116 117
    "}" (323) 110 112 114 116 117
    "<" (324) 66 122
    ">" (325) 67 122
    "band" (326) 102
    "bor" (327) 100
    "bxor" (328) 101
    "bnot" (329) 88
    "land" (330) 104
    "lor" (331) 103
    "lnot" (332) 89
    NEG (333)


Nonterminals, with rules where they appear

    $accept (79)
        on left: 0
    program (80)
        on left: 1
        on right: 0
    unit (81)
        on left: 2 3 4 5 6 7 8 9 10 11 12
        on right: 1 2 3 4 5 6 7 8 9 10 11
    identifier <std::vector<std::string>> (82)
        on left: 13 14
        on right: 14 21 22 23 24 29 30 63 64 81 150 151
    type <AstType *> (83)
        on left: 15 16 17 18 19 20
        on right: 2 126
    non_empty_record_type_list <AstRecordType *> (84)
        on left: 21 22
        on right: 20 22
    union_type_list <AstUnionType *> (85)
        on left: 23 24
        on right: 18 24
    relation_decl <std::vector<AstRelation *>> (86)
        on left: 25 26
        on right: 4 127
    relation_list <std::vector<AstRelation *>> (87)
        on left: 27 28
        on right: 25 26 28
    non_empty_attributes <std::vector<AstAttribute *>> (88)
        on left: 29 30
        on right: 26 30
    qualifiers <uint32_t> (89)
        on left: 31 32 33 34 35 36 37 38 39
        on right: 25 26 31 32 33 34 35 36 37 38
    fact <AstClause *> (90)
        on left: 40
        on right: 7 130
    rule <std::vector<AstClause *>> (91)
        on left: 41 42 43
        on right: 8 42 43 131
    rule_def <std::vector<AstClause *>> (92)
        on left: 44
        on right: 41
    head <std::vector<AstAtom *>> (93)
        on left: 45 46
        on right: 44 46
    body <RuleBody *> (94)
        on left: 47
        on right: 44 110 112 114 116
    disjunction <RuleBody *> (95)
        on left: 48 49
        on right: 47 49 62
    conjunction <RuleBody *> (96)
        on left: 50 51
        on right: 48 49 51
    exec_plan <AstExecutionPlan *> (97)
        on left: 52
        on right: 43
    exec_plan_list <AstExecutionPlan *> (98)
        on left: 53 54
        on right: 52 54
    exec_order_list <AstExecutionOrder *> (99)
        on left: 55 56
        on right: 53 54
    non_empty_exec_order_list <AstExecutionOrder *> (100)
        on left: 57 58
        on right: 55 58
    term <RuleBody *> (101)
        on left: 59 60 61 62
        on right: 50 51 61
    atom <AstAtom *> (102)
        on left: 63 64
        on right: 40 45 46 59 109 111 113 115
    constraint <AstConstraint *> (103)
        on left: 65 66 67 68 69 70 71 72
        on right: 60
    non_empty_arg_list <std::vector<AstArgument *>> (104)
        on left: 73 74
        on right: 63 74 84 86 105 106 107
    arg <AstArgument *> (105)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 65 66 67 68 69 70 73 74 80 81 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 111 112 113 114 115 116
    component <AstComponent *> (106)
        on left: 117
        on right: 9 134
    component_head <AstComponent *> (107)
        on left: 118 119 120
        on right: 117 119 120
    comp_type <AstComponentType *> (108)
        on left: 121
        on right: 118 119 120 136
    type_params <std::vector<AstTypeIdentifier>> (109)
        on left: 122 123
        on right: 121
    type_param_list <std::vector<AstTypeIdentifier>> (110)
        on left: 124 125
        on right: 122 125
    component_body <AstComponent *> (111)
        on left: 126 127 128 129 130 131 132 133 134 135
        on right: 117 126 127 128 129 130 131 132 133 134
    comp_init <AstComponentInit *> (112)
        on left: 136
        on right: 10 133
    functor_decl <AstFunctorDeclaration *> (113)
        on left: 137 138
        on right: 3
    non_empty_functor_arg_type_list <std::string> (114)
        on left: 139 140
        on right: 138 140
    functor_type <std::string> (115)
        on left: 141
        on right: 137 138 139 140
    pragma <AstPragma *> (116)
        on left: 142 143
        on right: 11
    load_head <std::vector<AstLoad *>> (117)
        on left: 144
        on right: 5 128
    store_head <std::vector<AstStore *>> (118)
        on left: 145 146
        on right: 6 129
    io_directive_list <std::vector<AstIO *>> (119)
        on left: 147 148 149
        on right: 144 145 146
    io_relation_list <std::vector<AstIO *>> (120)
        on left: 150 151
        on right: 147 148 149 151
    non_empty_key_value_pairs <std::vector<std::pair
            <std::string, std::string>>> (121)
        on left: 152 153
        on right: 149 153
    kvp_value <std::string> (122)
        on left: 154 155 156 157
        on right: 152 153


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 12 (unit)

    program  go to state 1
    unit     go to state 2


State 1

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 program: unit .
    2 unit: unit . type
    3     | unit . functor_decl
    4     | unit . relation_decl
    5     | unit . load_head
    6     | unit . store_head
    7     | unit . fact
    8     | unit . rule
    9     | unit . component
   10     | unit . comp_init
   11     | unit . pragma

    "identifier"                        shift, and go to state 4
    "pragma directive"                  shift, and go to state 5
    "relation declaration"              shift, and go to state 6
    "functor declaration"               shift, and go to state 7
    "input directives declaration"      shift, and go to state 8
    "output directives declaration"     shift, and go to state 9
    "printsize directives declaration"  shift, and go to state 10
    "type declaration"                  shift, and go to state 11
    "component declaration"             shift, and go to state 12
    "component instantiation"           shift, and go to state 13
    "numeric type declaration"          shift, and go to state 14
    "symbolic type declaration"         shift, and go to state 15

    $default  reduce using rule 1 (program)

    identifier      go to state 16
    type            go to state 17
    relation_decl   go to state 18
    fact            go to state 19
    rule            go to state 20
    rule_def        go to state 21
    head            go to state 22
    atom            go to state 23
    component       go to state 24
    component_head  go to state 25
    comp_init       go to state 26
    functor_decl    go to state 27
    pragma          go to state 28
    load_head       go to state 29
    store_head      go to state 30


State 3

    0 $accept: program "end of file" .

    $default  accept


State 4

   13 identifier: "identifier" .

    $default  reduce using rule 13 (identifier)


State 5

  142 pragma: "pragma directive" . "symbol" "symbol"
  143       | "pragma directive" . "symbol"

    "symbol"  shift, and go to state 31


State 6

   25 relation_decl: "relation declaration" . relation_list "(" ")" qualifiers
   26              | "relation declaration" . relation_list "(" non_empty_attributes ")" qualifiers

    "identifier"  shift, and go to state 32

    relation_list  go to state 33


State 7

  137 functor_decl: "functor declaration" . "identifier" "(" ")" ":" functor_type
  138             | "functor declaration" . "identifier" "(" non_empty_functor_arg_type_list ")" ":" functor_type

    "identifier"  shift, and go to state 34


State 8

  144 load_head: "input directives declaration" . io_directive_list

    "identifier"  shift, and go to state 4

    identifier         go to state 35
    io_directive_list  go to state 36
    io_relation_list   go to state 37


State 9

  145 store_head: "output directives declaration" . io_directive_list

    "identifier"  shift, and go to state 4

    identifier         go to state 35
    io_directive_list  go to state 38
    io_relation_list   go to state 37


State 10

  146 store_head: "printsize directives declaration" . io_directive_list

    "identifier"  shift, and go to state 4

    identifier         go to state 35
    io_directive_list  go to state 39
    io_relation_list   go to state 37


State 11

   17 type: "type declaration" . "identifier"
   18     | "type declaration" . "identifier" "=" union_type_list
   19     | "type declaration" . "identifier" "=" "[" "]"
   20     | "type declaration" . "identifier" "=" "[" non_empty_record_type_list "]"

    "identifier"  shift, and go to state 40


State 12

  118 component_head: "component declaration" . comp_type

    "identifier"  shift, and go to state 41

    comp_type  go to state 42


State 13

  136 comp_init: "component instantiation" . "identifier" "=" comp_type

    "identifier"  shift, and go to state 43


State 14

   15 type: "numeric type declaration" . "identifier"

    "identifier"  shift, and go to state 44


State 15

   16 type: "symbolic type declaration" . "identifier"

    "identifier"  shift, and go to state 45


State 16

   14 identifier: identifier . "." "identifier"
   63 atom: identifier . "(" non_empty_arg_list ")"
   64     | identifier . "(" ")"

    "("  shift, and go to state 46
    "."  shift, and go to state 47


State 17

    2 unit: unit type .

    $default  reduce using rule 2 (unit)


State 18

    4 unit: unit relation_decl .

    $default  reduce using rule 4 (unit)


State 19

    7 unit: unit fact .

    $default  reduce using rule 7 (unit)


State 20

    8 unit: unit rule .
   42 rule: rule . "strict marker"
   43     | rule . exec_plan

    "strict marker"  shift, and go to state 48
    "plan keyword"   shift, and go to state 49

    $default  reduce using rule 8 (unit)

    exec_plan  go to state 50


State 21

   41 rule: rule_def .

    $default  reduce using rule 41 (rule)


State 22

   44 rule_def: head . ":-" body "."
   46 head: head . "," atom

    ":-"  shift, and go to state 51
    ","   shift, and go to state 52


State 23

   40 fact: atom . "."
   45 head: atom .

    "."  shift, and go to state 53

    $default  reduce using rule 45 (head)


State 24

    9 unit: unit component .

    $default  reduce using rule 9 (unit)


State 25

  117 component: component_head . "{" component_body "}"
  119 component_head: component_head . ":" comp_type
  120               | component_head . "," comp_type

    ","  shift, and go to state 54
    ":"  shift, and go to state 55
    "{"  shift, and go to state 56


State 26

   10 unit: unit comp_init .

    $default  reduce using rule 10 (unit)


State 27

    3 unit: unit functor_decl .

    $default  reduce using rule 3 (unit)


State 28

   11 unit: unit pragma .

    $default  reduce using rule 11 (unit)


State 29

    5 unit: unit load_head .

    $default  reduce using rule 5 (unit)


State 30

    6 unit: unit store_head .

    $default  reduce using rule 6 (unit)


State 31

  142 pragma: "pragma directive" "symbol" . "symbol"
  143       | "pragma directive" "symbol" .

    "symbol"  shift, and go to state 57

    $default  reduce using rule 143 (pragma)


State 32

   27 relation_list: "identifier" .

    $default  reduce using rule 27 (relation_list)


State 33

   25 relation_decl: "relation declaration" relation_list . "(" ")" qualifiers
   26              | "relation declaration" relation_list . "(" non_empty_attributes ")" qualifiers
   28 relation_list: relation_list . "," "identifier"

    "("  shift, and go to state 58
    ","  shift, and go to state 59


State 34

  137 functor_decl: "functor declaration" "identifier" . "(" ")" ":" functor_type
  138             | "functor declaration" "identifier" . "(" non_empty_functor_arg_type_list ")" ":" functor_type

    "("  shift, and go to state 60


State 35

   14 identifier: identifier . "." "identifier"
  150 io_relation_list: identifier .

    "."  shift, and go to state 47

    $default  reduce using rule 150 (io_relation_list)


State 36

  144 load_head: "input directives declaration" io_directive_list .

    $default  reduce using rule 144 (load_head)


State 37

  147 io_directive_list: io_relation_list .
  148                  | io_relation_list . "(" ")"
  149                  | io_relation_list . "(" non_empty_key_value_pairs ")"
  151 io_relation_list: io_relation_list . "," identifier

    "("  shift, and go to state 61
    ","  shift, and go to state 62

    $default  reduce using rule 147 (io_directive_list)


State 38

  145 store_head: "output directives declaration" io_directive_list .

    $default  reduce using rule 145 (store_head)


State 39

  146 store_head: "printsize directives declaration" io_directive_list .

    $default  reduce using rule 146 (store_head)


State 40

   17 type: "type declaration" "identifier" .
   18     | "type declaration" "identifier" . "=" union_type_list
   19     | "type declaration" "identifier" . "=" "[" "]"
   20     | "type declaration" "identifier" . "=" "[" non_empty_record_type_list "]"

    "="  shift, and go to state 63

    $default  reduce using rule 17 (type)


State 41

  121 comp_type: "identifier" . type_params

    "<"  shift, and go to state 64

    $default  reduce using rule 123 (type_params)

    type_params  go to state 65


State 42

  118 component_head: "component declaration" comp_type .

    $default  reduce using rule 118 (component_head)


State 43

  136 comp_init: "component instantiation" "identifier" . "=" comp_type

    "="  shift, and go to state 66


State 44

   15 type: "numeric type declaration" "identifier" .

    $default  reduce using rule 15 (type)


State 45

   16 type: "symbolic type declaration" "identifier" .

    $default  reduce using rule 16 (type)


State 46

   63 atom: identifier "(" . non_empty_arg_list ")"
   64     | identifier "(" . ")"

    "symbol"                        shift, and go to state 67
    "identifier"                    shift, and go to state 68
    "number"                        shift, and go to state 69
    "concatenation of two strings"  shift, and go to state 70
    "ordinal number of a string"    shift, and go to state 71
    "length of a string"            shift, and go to state 72
    "sub-string of a string"        shift, and go to state 73
    "min aggregator"                shift, and go to state 74
    "max aggregator"                shift, and go to state 75
    "count aggregator"              shift, and go to state 76
    "sum aggregator"                shift, and go to state 77
    "convert string to number"      shift, and go to state 78
    "convert number to string"      shift, and go to state 79
    "type cast"                     shift, and go to state 80
    "@"                             shift, and go to state 81
    "nil reference"                 shift, and go to state 82
    "["                             shift, and go to state 83
    "_"                             shift, and go to state 84
    "$"                             shift, and go to state 85
    "-"                             shift, and go to state 86
    "("                             shift, and go to state 87
    ")"                             shift, and go to state 88
    "bnot"                          shift, and go to state 89
    "lnot"                          shift, and go to state 90

    non_empty_arg_list  go to state 91
    arg                 go to state 92


State 47

   14 identifier: identifier "." . "identifier"

    "identifier"  shift, and go to state 93


State 48

   42 rule: rule "strict marker" .

    $default  reduce using rule 42 (rule)


State 49

   52 exec_plan: "plan keyword" . exec_plan_list

    "number"  shift, and go to state 94

    exec_plan_list  go to state 95


State 50

   43 rule: rule exec_plan .

    $default  reduce using rule 43 (rule)


State 51

   44 rule_def: head ":-" . body "."

    "symbol"                                             shift, and go to state 67
    "identifier"                                         shift, and go to state 96
    "number"                                             shift, and go to state 69
    "match predicate"                                    shift, and go to state 97
    "checks whether substring is contained in a string"  shift, and go to state 98
    "concatenation of two strings"                       shift, and go to state 70
    "ordinal number of a string"                         shift, and go to state 71
    "length of a string"                                 shift, and go to state 72
    "sub-string of a string"                             shift, and go to state 73
    "min aggregator"                                     shift, and go to state 74
    "max aggregator"                                     shift, and go to state 75
    "count aggregator"                                   shift, and go to state 76
    "sum aggregator"                                     shift, and go to state 77
    "true literal constraint"                            shift, and go to state 99
    "false literal constraint"                           shift, and go to state 100
    "convert string to number"                           shift, and go to state 78
    "convert number to string"                           shift, and go to state 79
    "type cast"                                          shift, and go to state 80
    "@"                                                  shift, and go to state 81
    "nil reference"                                      shift, and go to state 82
    "["                                                  shift, and go to state 83
    "_"                                                  shift, and go to state 84
    "$"                                                  shift, and go to state 85
    "-"                                                  shift, and go to state 86
    "!"                                                  shift, and go to state 101
    "("                                                  shift, and go to state 102
    "bnot"                                               shift, and go to state 89
    "lnot"                                               shift, and go to state 90

    identifier   go to state 16
    body         go to state 103
    disjunction  go to state 104
    conjunction  go to state 105
    term         go to state 106
    atom         go to state 107
    constraint   go to state 108
    arg          go to state 109


State 52

   46 head: head "," . atom

    "identifier"  shift, and go to state 4

    identifier  go to state 16
    atom        go to state 110


State 53

   40 fact: atom "." .

    $default  reduce using rule 40 (fact)


State 54

  120 component_head: component_head "," . comp_type

    "identifier"  shift, and go to state 41

    comp_type  go to state 111


State 55

  119 component_head: component_head ":" . comp_type

    "identifier"  shift, and go to state 41

    comp_type  go to state 112


State 56

  117 component: component_head "{" . component_body "}"

    $default  reduce using rule 135 (component_body)

    component_body  go to state 113


State 57

  142 pragma: "pragma directive" "symbol" "symbol" .

    $default  reduce using rule 142 (pragma)


State 58

   25 relation_decl: "relation declaration" relation_list "(" . ")" qualifiers
   26              | "relation declaration" relation_list "(" . non_empty_attributes ")" qualifiers

    "identifier"  shift, and go to state 114
    ")"           shift, and go to state 115

    non_empty_attributes  go to state 116


State 59

   28 relation_list: relation_list "," . "identifier"

    "identifier"  shift, and go to state 117


State 60

  137 functor_decl: "functor declaration" "identifier" "(" . ")" ":" functor_type
  138             | "functor declaration" "identifier" "(" . non_empty_functor_arg_type_list ")" ":" functor_type

    "identifier"  shift, and go to state 118
    ")"           shift, and go to state 119

    non_empty_functor_arg_type_list  go to state 120
    functor_type                     go to state 121


State 61

  148 io_directive_list: io_relation_list "(" . ")"
  149                  | io_relation_list "(" . non_empty_key_value_pairs ")"

    "identifier"  shift, and go to state 122
    ")"           shift, and go to state 123

    non_empty_key_value_pairs  go to state 124


State 62

  151 io_relation_list: io_relation_list "," . identifier

    "identifier"  shift, and go to state 4

    identifier  go to state 125


State 63

   18 type: "type declaration" "identifier" "=" . union_type_list
   19     | "type declaration" "identifier" "=" . "[" "]"
   20     | "type declaration" "identifier" "=" . "[" non_empty_record_type_list "]"

    "identifier"  shift, and go to state 4
    "["           shift, and go to state 126

    identifier       go to state 127
    union_type_list  go to state 128


State 64

  122 type_params: "<" . type_param_list ">"

    "identifier"  shift, and go to state 129

    type_param_list  go to state 130


State 65

  121 comp_type: "identifier" type_params .

    $default  reduce using rule 121 (comp_type)


State 66

  136 comp_init: "component instantiation" "identifier" "=" . comp_type

    "identifier"  shift, and go to state 41

    comp_type  go to state 131


State 67

   75 arg: "symbol" .

    $default  reduce using rule 75 (arg)


State 68

   79 arg: "identifier" .

    $default  reduce using rule 79 (arg)


State 69

   76 arg: "number" .

    $default  reduce using rule 76 (arg)


State 70

  107 arg: "concatenation of two strings" . "(" arg "," non_empty_arg_list ")"

    "("  shift, and go to state 132


State 71

   90 arg: "ordinal number of a string" . "(" arg ")"

    "("  shift, and go to state 133


State 72

   91 arg: "length of a string" . "(" arg ")"

    "("  shift, and go to state 134


State 73

  108 arg: "sub-string of a string" . "(" arg "," arg "," arg ")"

    "("  shift, and go to state 135


State 74

  106 arg: "min aggregator" . "(" arg "," non_empty_arg_list ")"
  113    | "min aggregator" . arg ":" atom
  114    | "min aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 67
    "identifier"                    shift, and go to state 68
    "number"                        shift, and go to state 69
    "concatenation of two strings"  shift, and go to state 70
    "ordinal number of a string"    shift, and go to state 71
    "length of a string"            shift, and go to state 72
    "sub-string of a string"        shift, and go to state 73
    "min aggregator"                shift, and go to state 74
    "max aggregator"                shift, and go to state 75
    "count aggregator"              shift, and go to state 76
    "sum aggregator"                shift, and go to state 77
    "convert string to number"      shift, and go to state 78
    "convert number to string"      shift, and go to state 79
    "type cast"                     shift, and go to state 80
    "@"                             shift, and go to state 81
    "nil reference"                 shift, and go to state 82
    "["                             shift, and go to state 83
    "_"                             shift, and go to state 84
    "$"                             shift, and go to state 85
    "-"                             shift, and go to state 86
    "("                             shift, and go to state 136
    "bnot"                          shift, and go to state 89
    "lnot"                          shift, and go to state 90

    arg  go to state 137


State 75

  105 arg: "max aggregator" . "(" arg "," non_empty_arg_list ")"
  115    | "max aggregator" . arg ":" atom
  116    | "max aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 67
    "identifier"                    shift, and go to state 68
    "number"                        shift, and go to state 69
    "concatenation of two strings"  shift, and go to state 70
    "ordinal number of a string"    shift, and go to state 71
    "length of a string"            shift, and go to state 72
    "sub-string of a string"        shift, and go to state 73
    "min aggregator"                shift, and go to state 74
    "max aggregator"                shift, and go to state 75
    "count aggregator"              shift, and go to state 76
    "sum aggregator"                shift, and go to state 77
    "convert string to number"      shift, and go to state 78
    "convert number to string"      shift, and go to state 79
    "type cast"                     shift, and go to state 80
    "@"                             shift, and go to state 81
    "nil reference"                 shift, and go to state 82
    "["                             shift, and go to state 83
    "_"                             shift, and go to state 84
    "$"                             shift, and go to state 85
    "-"                             shift, and go to state 86
    "("                             shift, and go to state 138
    "bnot"                          shift, and go to state 89
    "lnot"                          shift, and go to state 90

    arg  go to state 139


State 76

  109 arg: "count aggregator" . ":" atom
  110    | "count aggregator" . ":" "{" body "}"

    ":"  shift, and go to state 140


State 77

  111 arg: "sum aggregator" . arg ":" atom
  112    | "sum aggregator" . arg ":" "{" body "}"

    "symbol"                        shift, and go to state 67
    "identifier"                    shift, and go to state 68
    "number"                        shift, and go to state 69
    "concatenation of two strings"  shift, and go to state 70
    "ordinal number of a string"    shift, and go to state 71
    "length of a string"            shift, and go to state 72
    "sub-string of a string"        shift, and go to state 73
    "min aggregator"                shift, and go to state 74
    "max aggregator"                shift, and go to state 75
    "count aggregator"              shift, and go to state 76
    "sum aggregator"                shift, and go to state 77
    "convert string to number"      shift, and go to state 78
    "convert number to string"      shift, and go to state 79
    "type cast"                     shift, and go to state 80
    "@"                             shift, and go to state 81
    "nil reference"                 shift, and go to state 82
    "["                             shift, and go to state 83
    "_"                             shift, and go to state 84
    "$"                             shift, and go to state 85
    "-"                             shift, and go to state 86
    "("                             shift, and go to state 87
    "bnot"                          shift, and go to state 89
    "lnot"                          shift, and go to state 90

    arg  go to state 141


State 78

   92 arg: "convert string to number" . "(" arg ")"

    "("  shift, and go to state 142


State 79

   93 arg: "convert number to string" . "(" arg ")"

    "("  shift, and go to state 143


State 80

   81 arg: "type cast" . "(" arg "," identifier ")"

    "("  shift, and go to state 144


State 81

   85 arg: "@" . "identifier" "(" ")"
   86    | "@" . "identifier" "(" non_empty_arg_list ")"

    "identifier"  shift, and go to state 145


State 82

   82 arg: "nil reference" .

    $default  reduce using rule 82 (arg)


State 83

   83 arg: "[" . "]"
   84    | "[" . non_empty_arg_list "]"

    "symbol"                        shift, and go to state 67
    "identifier"                    shift, and go to state 68
    "number"                        shift, and go to state 69
    "concatenation of two strings"  shift, and go to state 70
    "ordinal number of a string"    shift, and go to state 71
    "length of a string"            shift, and go to state 72
    "sub-string of a string"        shift, and go to state 73
    "min aggregator"                shift, and go to state 74
    "max aggregator"                shift, and go to state 75
    "count aggregator"              shift, and go to state 76
    "sum aggregator"                shift, and go to state 77
    "convert string to number"      shift, and go to state 78
    "convert number to string"      shift, and go to state 79
    "type cast"                     shift, and go to state 80
    "@"                             shift, and go to state 81
    "nil reference"                 shift, and go to state 82
    "["                             shift, and go to state 83
    "]"                             shift, and go to state 146
    "_"                             shift, and go to state 84
    "$"                             shift, and go to state 85
    "-"                             shift, and go to state 86
    "("                             shift, and go to state 87
    "bnot"                          shift, and go to state 89
    "lnot"                          shift, and go to state 90

    non_empty_arg_list  go to state 147
    arg                 go to state 92


State 84

   77 arg: "_" .

    $default  reduce using rule 77 (arg)


State 85

   78 arg: "$" .

    $default  reduce using rule 78 (arg)


State 86

   87 arg: "-" . arg
